2011-04-09
	* use the new api to set the tooltips.

2010-09-03
	* re-written and, or and not and alias to %and%, %or% and %not%.
	* use print method rather than summary for codingByOne object.

2010-08-29
	* use "changed" signal of text buffer instead of keystroke.
	* save button of annotation widget grey out by default.
	* menu of "export coding" is consistent with retrival type.

2010-08-28
	* size of gselect.list can be controlled by arguments.

2010-08-27
	* adjust size and position of two widgets.

2010-08-26
	* improved project memo button.

2010-08-25
	* bugfix of write.FileList.

2010-08-13
	* size/position of widgets are fine-tuned now.
	* File names are sorted by default
2010-08-08
	* bugfix of "save and close" button.

2010-06-11
	* fine tune the default coordinate of widgets.

2010-06-09
	* memo widget : save button activated only when necessary

2010-06-04
	*minor bugfix of new_project

2010-05-28
	* only allow one RQDA to be launched.

2010-05-25
	* export closeProject and openProject for automation
	* "save journal" button  activated  when necessary

2010-05-12
	* change settings about GUI size and layouts of settings
	   now fit into mini netbook

2010-05-08
	* change default height of RQDA which takes values according to
	screen size

2010-04-28
	* use message instead of cat

2010-04-21
	* fix a bug in gselect.list (crash R with 2.18 or newer libgtk2)

2010-04-19
	* minor bugbix of GetAttr (encoding issue)

2010-04-16
	*minor bugfix of attributes related to encoding

2010-04-09
	* update RQDATables.Rd (all are documented) and document a bug

2010-04-07
	* use previous search pattern in search file within case  category
	when exists

2010-03-28
	* use .onAttach rather than .onLoad

2010-03-19
	* rename many functions accoding to cam names (first is lowercase).
	* rename Rd files accordingly.

2010-03-12
	* names of widgets are set to default when project is closed.
	* bugfix of HL_AllCodings.
	* throws an error if add an adjacent coding.

2010-03-10