@@ -8,7 +8,8 @@ export("%and%","%or%","%not%", and, CleanProject,closeProject,
        getCodingTable,getFileIds,getFileIdSets,getFileNames,
        list.deleted,nCodedByTwo, not, or, openProject,
        pdelete,queryFiles,relation,retrieval,RQDA,RQDAQuery,
-       SearchFiles,ShowSubset,summaryCodings,undelete,write.FileList)
+       SearchFiles,ShowSubset,summaryCodings,undelete,
+       ViewPlainFile,write.FileList)
 S3method("%and%",RQDA.vector)
 S3method("%and%",codingsByOne)
 S3method("%or%",RQDA.vector)
